:wrench: Configuring gradle to enable preview features in run tasks